--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "jspdf-autotable": "^5.0.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.309.0",
-    "next": "15.0.1",
+    "next": "15.1.7",
     "next-auth": "^4.24.5",
     "next-intl": "^3.11.0",
     "react": "^18.2.0",
@@ -53,7 +53,7 @@
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
