--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -68,4 +68,6 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Production command
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
+# Production command
+RUN chmod +x /app/start.sh
+CMD ["/app/start.sh"]
