docs: update production backend URL in templates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,8 +17,8 @@ JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # CORS Configuration
-# String representation of a list of origins
-CORS_ORIGINS=["http://localhost:3000","https://boussole.vercel.app"]
+# String representation of a list of origins (comma-separated or JSON array)
+CORS_ORIGINS=http://localhost:3000,https://boussole.vercel.app,https://boussole-frontend.vercel.app
 
 # AI / LLM Configuration
 LLM_PROVIDER=gemini  # groq, openai, or gemini
