--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,7 +3,7 @@
 # ============================================
 
 # API URL (Backend URL)
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=https://boussole-production.up.railway.app
 
 # NextAuth Configuration (if needed)
 NEXTAUTH_URL=http://localhost:3000
